po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 14:21+0000\n"
+"PO-Revision-Date: 2017-03-02 15:40+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -2380,7 +2380,7 @@ msgstr "Pošto je vaša sesija gotova, resetovali smo stranicu za pretragu."
 
 #: CRM/Contact/DAO/Contact.php CRM/Core/SelectValues.php
 msgid "Internal Contact ID"
-msgstr "ID internog kontakta"
+msgstr "Interni ID kontakta"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Contact Subtype"
@@ -2592,15 +2592,15 @@ msgstr "Kolona broj"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet is Minimized?"
-msgstr ""
+msgstr "Komponente kontrolne table su minimizovane?"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet is FullScreen?"
-msgstr ""
+msgstr "Komponente kontrolne table su preko celog ekrana?"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet is Active?"
-msgstr ""
+msgstr "Komponente kontrolne table su aktivne?"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Content"
@@ -2608,7 +2608,7 @@ msgstr "Sadržaj"
 
 #: CRM/Contact/DAO/DashboardContact.php
 msgid "Dashlet Created On"
-msgstr ""
+msgstr "Komponente kontrolne table su kreirane"
 
 #: CRM/Contact/DAO/Group.php CRM/Contact/DAO/GroupContact.php
 msgid "Group ID"
@@ -3867,7 +3867,7 @@ msgstr "bilo koji"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Permissioned Relationship?"
-msgstr ""
+msgstr "Veza sa dozvolom?"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Target Contact(s) in Group"
@@ -4075,7 +4075,7 @@ msgstr "Prikaži samo plaćanja kreditnom karticom"
 
 #: CRM/Contact/Form/Search/Custom/EventAggregate.php
 msgid "Show payees"
-msgstr ""
+msgstr "Prikaži primaoce uplata"
 
 #: CRM/Contact/Form/Search/Custom/EventAggregate.php
 #: CRM/Core/BAO/ActionSchedule.php
@@ -6526,15 +6526,15 @@ msgstr "Interval učestalosti ponavljanja"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "End Frequency Unit"
-msgstr ""
+msgstr "Završi jedinicu učestalosti"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "End Frequency Interval"
-msgstr ""
+msgstr "Završi interval učestalosti"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "End Action"
-msgstr ""
+msgstr "Završi akciju"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Schedule is Active?"
@@ -6916,7 +6916,7 @@ msgstr "Rezervisana grupa?"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "DashletID"
-msgstr ""
+msgstr "ID Komponente kontrolne table"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Domain"
@@ -6924,15 +6924,15 @@ msgstr ""
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Name"
-msgstr ""
+msgstr "Ime komponente kontrolne table"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Title"
-msgstr ""
+msgstr "Naslov komponente kontrolne table"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet URL"
-msgstr ""
+msgstr "URL Komponente kontrolne table"
 
 #: CRM/Core/DAO/Dashboard.php
 msgid "Dashlet Permission"
@@ -8821,7 +8821,7 @@ msgid ""
 "simultaneous payments, or the option to \"Execute real-time monetary "
 "transactions\" is disabled. Please contact the site administrator and notify"
 " them of this error"
-msgstr ""
+msgstr "Ova stranica za donacije je podešena tako da podržava zasebne uplate za donacije i članstva. Ovaj %1 plugin trenutno ne podržava višestruke uplate u isto vreme, ili je opcija \"Izvrši monetarne transakcije\" isključena. Kontaktirajte administratora sajta i obavestite ga o ovoj grešci"
 
 #: CRM/Core/Payment/Realex.php
 msgid "Realex"
@@ -9045,7 +9045,7 @@ msgstr "administriraj CiviCRM"
 msgid ""
 "Perform all tasks in the Administer CiviCRM control panel and Import "
 "Contacts"
-msgstr ""
+msgstr "Izvrši sve zadatke na kontrolnoj tabli Administritaj CiviCRM i Importuj kontakte"
 
 #: CRM/Core/Permission.php
 msgid "skip IDS check"
@@ -9163,7 +9163,7 @@ msgstr "administracija pravila deduplikacije"
 
 #: CRM/Core/Permission.php
 msgid "Create and edit rules, change the supervised and unsupervised rules"
-msgstr ""
+msgstr "Kreiraj i uredi pravila, promeni pravila sa i bez nadzora"
 
 #: CRM/Core/Permission.php
 msgid "merge duplicate contacts"
@@ -12580,7 +12580,7 @@ msgstr ""
 
 #: CRM/Utils/Address/BatchUpdate.php
 msgid "Following is the list of contacts whose address is not parsed:"
-msgstr ""
+msgstr "Sledi lista kontakata čije adrese nisu raščlanjene:"
 
 #: CRM/Utils/Address/USPS.php
 msgid "USPS Address Lookup Failed with HTTP status code: %1"
@@ -12771,7 +12771,7 @@ msgstr "%1 ne postoji ili je prazno"
 
 #: CRM/Utils/Mail/Incoming.php
 msgid "%1 could not be parsed"
-msgstr ""
+msgstr "%1 nije moguće raščlaniti"
 
 #: CRM/Utils/Mail.php
 msgid "Mailing Error"
@@ -12828,7 +12828,7 @@ msgstr "Sendmail argument je netačan."
 msgid ""
 "The FROM Email Address configured for this feature may not be a valid sender"
 " based on your email service provider rules."
-msgstr ""
+msgstr "OD email adresa podešena za ovu opciju možda nije validan pošiljalac na osnovu pravila vašeg email provajdera."
 
 #: CRM/Utils/Mail.php
 msgid "Check <a href=\"%1\">this page</a> for more information."
@@ -13405,7 +13405,7 @@ msgid ""
 "redirect the user to a static URL if they click the Cancel button - enter "
 "the complete URL here. If this field is left blank, the built-in Profile "
 "form will be redisplayed."
-msgstr ""
+msgstr "Ukoliko ovaj profil koristite kao formular za prijavu ili uređivanje kontakata, a želite da korisnik bude preusmeren na statičku URL adresu ukoliko klikne na dugme Otkaži - unesite punu URL adresu ovde. Ukoliko ovo polje ostavite prazno, prikazivaće se formular ugrađenog profila."
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid "Explanatory text displayed at the end of the form."
@@ -13684,7 +13684,7 @@ msgstr "Ovim formularom možete dati pristup CiviCRM komponentama i ostalim Civi
 msgid ""
 "<strong>NOTE: Super Admin</strong> and <strong>Administrator</strong> roles "
 "will have all permissions in CiviCRM."
-msgstr ""
+msgstr "<strong>Beleška: Uloge Super Admin</strong> i <strong>Administrator</strong> će imati iste dozvole u CiviCRMu."
 
 #: templates/CRM/ACL/Page/ACL.tpl templates/CRM/ACL/Page/ACLBasic.tpl
 msgid ""
@@ -13768,13 +13768,13 @@ msgid ""
 "contacts listed above. However, if you think you might be editing the "
 "activity later - and entering different information for different contacts -"
 " check this box to create separate activity records."
-msgstr ""
+msgstr "Prema podrazumevanim podešavanjima, jedan zapis o aktivnosti će biti kreiran i povezan sa svim kontaktima u listi iznad. Međutim, ukoliko mislite da ćete možda kasnije uređivati ovu aktivnost - i unositi različite informacije za različite kontakte - štiklirajte ovu kućicu da biste kreirali odvojene zapise o aktivnostima."
 
 #: templates/CRM/Activity/Form/Activity.hlp
 msgid ""
 "You can optionally assign this activity to someone. Assigned activities will"
 " appear in their Activities listing at CiviCRM Home."
-msgstr ""
+msgstr "Možete dodeliti ovu aktivnost nekome. Dodeljene aktivnosti će se pojaviti u njihovom listingu aktivnosti na početnoj stranic CiviCRMa."
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
@@ -14030,7 +14030,7 @@ msgid ""
 "The Activity Import Wizard allows you to easily upload activity from other "
 "applications into CiviCRM. Contacts must already exist in your CiviCRM "
 "database prior to importing activity."
-msgstr ""
+msgstr "Activity Import Wizard omogućava brzo postavljanje podataka o aktivnostima iz drugih aplikacija u CiviCRM. Pre importovanja aktivnosti, kontakti već moraju da postoje u vašoj CiviCRM bazi."
 
 #: templates/CRM/Activity/Import/Form/DataSource.tpl
 msgid "Upload Data File"
@@ -14187,7 +14187,7 @@ msgstr "Redovi sa konfliktima"
 msgid ""
 "Rows with conflicting transaction ids within this file. These rows will be "
 "skipped (not imported)."
-msgstr ""
+msgstr "Redovi sa konfliktnim ID brojevima transakcija u ovom fajlu. Ovi redovi će biti preskoičeni (neće biti importovani)."
 
 #: templates/CRM/Activity/Import/Form/Preview.tpl
 #: templates/CRM/Activity/Import/Form/Summary.tpl
@@ -14220,15 +14220,15 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected mismatched activity IDs. These records have not been "
 "Updated."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je pronašao ID aktivnosti koji se ne slaže. Ovaj zapis neće biti ažuriran."
+msgstr[1] "CiviCRM je pronašao ID aktivnosti koji se ne slažu. Ovi zapisi neće biti ažurirani."
+msgstr[2] "CiviCRM je pronašao ID aktivnosti koji se ne slažu. Ovi zapisi neće biti ažurirani."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Mismatched Activity records</a>. You may then "
 "correct them, and import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti zapise o aktivnostima koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 msgid ""
@@ -14237,16 +14237,16 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected invalid data and/or formatting errors in %count "
 "records. These records have not been imported."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisu. Ovaj zapis neće biti importovan."
+msgstr[1] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisa. Ovi zapisi neće biti importovani."
+msgstr[2] "CiviCRM je detektovao nevažeće podatke i/ili greške u formatiranju u %count zapisa. Ovi zapisi neće biti importovani."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Errors</a>. You may then correct them, and "
 "import the new file with the corrected data."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti greške</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 msgid ""
@@ -14266,7 +14266,7 @@ msgid ""
 "You can <a href='%1'>Download Conflicts</a>. You may then review these "
 "records to determine if they are actually conflicts, and correct the "
 "transaction IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti konflikte</a>. Možete pregledati ove zapise da utvrdite da li su zapravo konflikti, i ispravite ID transakcija za one koji nisu."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 msgid ""
@@ -14275,16 +14275,16 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected %count records which are duplicates of existing CiviCRM"
 " activity records."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je prepoznao %count zapis koji je duplikat već postojećeg CiviCRM zapisa o aktivnostima."
+msgstr[1] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o aktivnostima."
+msgstr[2] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o aktivnostima."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 msgid ""
 "You can <a href='%1'>Download Duplicates</a>. You may then review these "
 "records to determine if they are actually duplicates, and correct the "
 "transaction IDs for those that are not."
-msgstr ""
+msgstr "Možete <a href='%1'>Preuzeti duplikate</a>. Možete pregledati ove zapise da utvrdite da li su zapravo duplikati, i ispravite ID transakcija za one koji nisu."
 
 #: templates/CRM/Activity/Import/Form/Summary.tpl
 #: templates/CRM/Contact/Import/Form/Summary.tpl
@@ -14436,7 +14436,7 @@ msgstr "Nema predstojećih događaja."
 msgid ""
 "Select the email format preferred by this contact. Select 'Both' to send "
 "HTML and Text formats."
-msgstr ""
+msgstr "Odaberite format emaila koji ovaj kontakt preferira. Izaberite 'Oba' da biste poslali HTML i Text formate."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Bulk Mailings"
@@ -14451,7 +14451,7 @@ msgid ""
 "location is used. However, if the contact prefers to have CiviMail ('bulk') "
 "mailings set to an alternate email address - check the 'Use for Bulk "
 "Mailings' box next to that email address."
-msgstr ""
+msgstr "Ukoliko koristite CiviMail komponentu za slanje mailinga kontaktima, ovo polje pruža dodatnu kontrolu nad email adresom na koju se mailinzi šalju. Prema podrazumevanim podešavanjima, CiviMail šalje mail na preferiranu email adresu kontakta. Ukoliko kontakt ima veći broj lokacija, upotrebiće preferirani email na primarnoj lokaciji. Međutim, ako kontak preferira da mu se CiviMail ('grupni') mailovi šalju na alternativnu email adresu - štiklirajte kućicu 'Koristi za grupne mailinge' pored te email adrese."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Opt Out"
@@ -14660,7 +14660,7 @@ msgstr "Geokoding"
 msgid ""
 "Latitude and longitude may be automatically populated by enabling a Mapping "
 "Provider."
-msgstr ""
+msgstr "Geografska širina i dužina mogu biti automatski popunjene aktivacijom Provajdera mapiranja."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Override Geocoding"
@@ -14745,7 +14745,7 @@ msgstr "Ovaj zapis će odmah biti obrisan. Ova akcija je nepovratna."
 msgid ""
 "You can search all contacts for duplicates or limit the search to a specific"
 " group."
-msgstr ""
+msgstr "Možete pretraživati sve kontakte za duplikatima ili organičiti pretragu na određenu grupu."
 
 #: templates/CRM/Contact/Form/DedupeRules.tpl
 msgid "Matching Rule for %1 Contacts"
@@ -15097,7 +15097,7 @@ msgid ""
 "left into the Main Contact. In addition to the contact data (address, phone,"
 " email...), you may choose to move all or some of the related records "
 "(groups, activities, tags, etc.)."
-msgstr ""
+msgstr "Kliknite na strong>Spoji</strong>  da biste prebacili podatke iz dupliranog kontakta levo u glavni kontakt. Osim podataka o kontaktu (adresa, telefon, email...), možete prebaciti i sve ili neke od povezanih zapisa (grupe, aktivnosti, tagove, itd.)."
 
 #: templates/CRM/Contact/Form/Merge.hlp
 msgid ""
@@ -15276,7 +15276,7 @@ msgid ""
 "Training activity recorded for them. In this case use the AND operator. If "
 "you need to find everyone who is in the Volunteers group OR has a Volunteer "
 "Training activity recorded, use the OR operator."
-msgstr ""
+msgstr "Određuje da li su vaši kriterijumi kombinovani sastavnim (i) ili rastavnim (ili) rečenicama. Na primer, možda želite da pronađete sve pojedince koji su u grupi Volonteri I imaju zapis o aktivnosti Trening volontera, U ovom slučaju koristite veznik I. Ukoliko treba da pronađete sve one koji su članovi grupe Volonteri ILI imaju zapis o aktivnosti Trening volontera, koristićete ILI."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid "Target Contact Group"
@@ -18781,7 +18781,7 @@ msgstr ""
 
 #: templates/CRM/Price/Form/Field.tpl
 msgid "Unit price."
-msgstr ""
+msgstr "Cena jedinice."
 
 #: templates/CRM/Price/Form/Field.tpl
 msgid ""
@@ -18842,7 +18842,7 @@ msgstr "Dug"
 
 #: templates/CRM/Price/Form/LineItem.tpl
 msgid "Amount of<br>Current Payment "
-msgstr ""
+msgstr "Iznos<br>trenutne uplate"
 
 #: templates/CRM/Price/Form/LineItem.tpl templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Participants"
@@ -20304,7 +20304,7 @@ msgstr "Šifra greške:"
 
 #: templates/CRM/common/fatal.tpl
 msgid "Database Error Code:"
-msgstr ""
+msgstr "Kod greške u bazi:"
 
 #: templates/CRM/common/fatal.tpl
 msgid "Additional Details:"
@@ -20345,7 +20345,7 @@ msgstr "Preuzmi CiviCRM."
 
 #: templates/CRM/common/footer.tpl
 msgid "View issues and report bugs."
-msgstr ""
+msgstr "Pregledaj moguće probleme i prijavi bagove."
 
 #: templates/CRM/common/footer.tpl
 msgid "Online documentation."
@@ -20708,7 +20708,7 @@ msgstr "Na čekanju imate prijavu na mejling listu %1. Da biste potvrdili ovu pr
 msgid ""
 "You have a pending subscription to the %1 mailing list. To confirm this "
 "subscription, reply to this email or click on this link: %2"
-msgstr "Na čekanju imate prijavu na mejling listu %1. Da biste potvrdili ovu prijavu, odgovorite na ovaj email ili kliknite na ovaj link: %2."
+msgstr "Na čekanju imate prijavu na mejling listu %1. Da biste potvrdili ovu prijavu, odgovorite na ovaj email ili kliknite na ovaj link: %2"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Your Subscription has been Activated"
@@ -22005,7 +22005,7 @@ msgstr "Nedostupan/na"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Not Required"
-msgstr ""
+msgstr "Nije obavezno"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Available"
@@ -22125,7 +22125,7 @@ msgstr "Možete podesiti svoju sliku kao pozadinu"
 
 #: xml/templates/civicrm_data.tpl
 msgid "5395 with Logo"
-msgstr ""
+msgstr "5395 sa logotipom"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Avery 5395 compatible labels with logo (4 up by 2, 59.2mm x 85.7mm)"
@@ -22197,23 +22197,23 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope #9"
-msgstr ""
+msgstr "Koverta #9"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope #10"
-msgstr ""
+msgstr "Koverta #10"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope #11"
-msgstr ""
+msgstr "Koverta #11"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope #12"
-msgstr ""
+msgstr "Koverta #12"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope #14"
-msgstr ""
+msgstr "Koverta #14"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Envelope ISO B4"
