po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 15:22+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-02 14:12+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2656,7 +2656,7 @@ msgid ""
 "in the CiviContribute search form.</strong> Refer to your payment "
 "processor's documentation for information on values to use for test credit "
 "card number, security code, postal code, etc."
-msgstr ""
+msgstr "Ova stranica se trenutno prikazuje u <strong>test-drive mode</strong> verziji. Transakcije će biti prosleđene test serveru vašeg procesora uplate. <strong>Neće biti obavljenih finansijskih transakcija, ali zapis o kontaktu će biti kreiran ili ažuriran, kao i zapisi o donaciji koji će biti sačuvani u bazi podataka. Koristite kontakte pripremljene za testiranje sa očiglednim imenima kako biste mogli da pregledate i obrišete ove zapise po potrebi.</strong> Pogledajte dokumentaciju vašeg procesora uplata za informacije o vrednostima koje ćete koristiti za test brojeve kreditnih kartica, sigurnosni kod, poštanski kod, itd."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -3498,7 +3498,7 @@ msgid ""
 "href=\"%1\"><strong>Administer CiviCRM Profiles</strong></a> if you need to "
 "review, modify or create profiles (you can come back at any time to select "
 "or update the Profile(s) used for this page)."
-msgstr ""
+msgstr "Možete koristiti postojeće CiviCRM profile na vašoj stranici - ILI napraviti profil(e) specifično za stranice za onlajn donacije. Idite na <strong>Administracija CiviCRM profila</strong></a> ukoliko želite da pregledate, izmenite ili napravite još profila (uvek se možete vratiti da izaberete ili ažurirate profil(e) koji se koriste na ovoj stranici)."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 msgid ""
@@ -3544,7 +3544,7 @@ msgid ""
 "Review your customized <strong>LIVE</strong> online contribution page here. "
 "Use the following URL in links and buttons on any website to send visitors "
 "to this live page:"
-msgstr ""
+msgstr "Pregledajte sopstvenu prilagođenu <strong>PRODUKCIJSKU</strong> stranicu za onlajn doniranje ovde. Koristite sledeći URL u linkovima i dugmićima na bilo kom sajtu kako biste poslali posetioce na ovu stranicu:"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.tpl
 msgid "Contribution Links"
@@ -3582,7 +3582,7 @@ msgstr "Ovaj naslov će se prikazivati na vrhu stranice sa zahvalnicom/potvrdom 
 msgid ""
 "Enter text (and optional HTML layout) for the thank-you block that will "
 "appear at the top of the Thank-you page."
-msgstr ""
+msgstr "Upišite text (i opcione HTML tagove) za blok zahvalnice koja će se pojaviti na vrhu stranice sa zahvalnicom."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Thank-you Page Footer"
@@ -3852,19 +3852,19 @@ msgstr "Adresa za naplatu"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Are you sure you want to delete this premium?"
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete ovu nagradu?"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
 "This will also remove the premium from any contribution pages that currently"
 " include it."
-msgstr ""
+msgstr "Ovo će ukloniti nagradu sa bilo koje stranice za doniranje na kojoj se nalazi."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
 "Name of the premium (product, service, subscription, etc.) as it will be "
 "displayed to contributors."
-msgstr ""
+msgstr "Ime nagrade (proizvod, usluga, pretplata, itd.) napisano onako kako će biti prikazano donatorima."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid ""
@@ -3895,7 +3895,7 @@ msgid ""
 "premium. If you want to offer it to all contributors regardless of "
 "contribution amount, enter '0'. If display of minimum contribution amounts "
 "is enabled then this text is displayed:"
-msgstr ""
+msgstr "Minimalni iznos donacije kako bi donator bio kvalifikovan da izabere ovu nagradu. Ukoliko želite da ovu nagradu ponudite svim donatorima, bez obzira na iznos donacije, unesite '0'. Ukoliko je prikaz najmanjeg iznosa donacije uključen onda će biti prikazan sledeći tekst:"
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "(Contribute at least X to be eligible for this gift.)"
@@ -3927,7 +3927,7 @@ msgid ""
 "Enter a comma-delimited list of color, size, etc. options for the product if"
 " applicable. Contributors will be presented a drop-down menu of these "
 "options when they select this product."
-msgstr ""
+msgstr "Unesite listu podeljenu zarezima boja, veličina, itd opcija za proizvod ukoliko su primenljive. Donatori će imati padajući meni sa ovim opcijama kada izaberu ovaj proizvod."
 
 #: templates/CRM/Contribute/Form/ManagePremiums.tpl
 msgid "Subscription or Service Settings"
@@ -3969,7 +3969,7 @@ msgid ""
 "Introduce the campaign and why you're supporting it. This text will appear "
 "at the top of your personal page AND at the top of the main campaign "
 "contribution page when people make a contribution through your page."
-msgstr ""
+msgstr "Prestavite kampanju i razlog zbog koga je podržavate. Ovaj tekst će se pojaviti na vrhu vaše lične strane i na vrhu glavne stranice za doniranje same kampanje kada ljudi doniraju preko vaše stranice."
 
 #: templates/CRM/Contribute/Form/PCP/Campaign.tpl
 msgid "The text for the contribute button."
@@ -4143,7 +4143,7 @@ msgstr "Ukupan broj uplata koje će biti primljene. Podesite ovu vrednost na 0 u
 
 #: templates/CRM/Contribute/Form/UpdateSubscription.tpl
 msgid "Number of time units for recurrence of payment."
-msgstr ""
+msgstr "Broj vremenskih jedinica za učestalost uplata."
 
 #: templates/CRM/Contribute/Form/UpdateSubscription.tpl
 msgid "Time unit for recurrence of payment. For example, \"month\"."
@@ -4151,7 +4151,7 @@ msgstr "Vremenska jedinica za učestalost uplata. Na primer, \"mesec\"."
 
 #: templates/CRM/Contribute/Form/UpdateSubscription.tpl
 msgid "Day in the period when the payment should be charged."
-msgstr ""
+msgstr "Dan tokom perioda kada će se tražiti uplata."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Contact Records for Contributors"
@@ -4166,7 +4166,7 @@ msgid ""
 "records. If possible, include a unique 'External ID' for each new contact "
 "which you can then use to match contributions to contributors. Then return "
 "to this screen and import the contribution records."
-msgstr ""
+msgstr "Import donacija zahteva da svaki donator već postoji kao zapis o kontaktu u vašoj CiviCRM bazi. Ukoliko treba da uradite import članstava za koje zapisi o kontaktima još uvek nisu dodati u CiviCRM - to ćete učiniti u 2 koraka. Prvo, upotrebite <strong>Import kontakata</strong> da biste dodali zapise o kontaktima. Ukoliko je moguće, za svaki novi kontakt upotrebite jedinstveni 'Eksterni ID' koji ćete onda upotrebiti kako biste povezali donacije sa kontaktima. Zatim se vratite na ovaj ekran i uradite import zapisa o donacijama."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid "Matching Contributions to Contributors"
@@ -4216,7 +4216,7 @@ msgid ""
 "Identifier' (if you are using those in your contact records), OR the "
 "property defined in your Unsupervised Duplicate Matching rule (which is "
 "Email Address by default)."
-msgstr ""
+msgstr "Ukoliko unosite nove donacije, moraćete da u vaš fajl uključite i kolonu koja sadrži vrednosti koje se koriste za povezivanje donacija sa postojećim kontaktom. Možete koristiti 'Interni ID kontakta', 'Eksterni ID kontakta' (ukoliko ih koristite u vašim zapisima o kontaktima), ILI svojstvo definisano u vašem Pravilu za pronalaženje duplikata bez nadzora (koje je, prema podrazumevanim podešavanjima, Email adresa)."
 
 #: templates/CRM/Contribute/Import/Form/DataSource.hlp
 msgid ""
@@ -4277,7 +4277,7 @@ msgstr[2] "CiviCRM je pronašao ID donatora koji se ne slažu. Ovi zapisi neće 
 msgid ""
 "You can <a href='%1'>Download Mismatched Contributions</a>. You may then "
 "correct them, and import the new file with the corrected data."
-msgstr "Možete <a href=\"%1\">Preuzeti zapise donacija koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
+msgstr "Možete <a href='%1'>Preuzeti zapise donacija koji se ne slažu</a>. Kada ih ispravite, importujte novi fajl sa ispravljenim podacima."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid ""
@@ -4556,13 +4556,13 @@ msgstr "Minimalna donacija"
 
 #: templates/CRM/Contribute/Page/ManagePremiums.tpl
 msgid "Add Premium"
-msgstr ""
+msgstr "Dodaj nagradu"
 
 #: templates/CRM/Contribute/Page/ManagePremiums.tpl
 msgid ""
 "No premium products have been created for your site. You can <a "
 "href='%1'>add one</a>."
-msgstr ""
+msgstr "Nema kreiranih proizvoda za nagrade za vaš sajt. Možete ih <a href='%1'>dodati</a>."
 
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 msgid "Your Page"
@@ -4706,7 +4706,7 @@ msgstr "Primljeno datuma"
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid ""
 "Contact us for information about contributions prior to those listed above."
-msgstr ""
+msgstr "Kontaktirajte nas za informacije o donacijama primljenim pre ovih u listi ispod."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "There are no contributions on record for you."
@@ -4944,7 +4944,7 @@ msgstr "Notifikacija periodične donacije"
 
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "This membership will be automatically renewed every %1 %2(s)."
-msgstr ""
+msgstr "Ovo članstvo se automatski obnavlja svakog/e %1 %2(s)."
 
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid ""
