--- a/po/sr_RS@latin/install.po
+++ b/po/sr_RS@latin/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 14:11+0000\n"
+"PO-Revision-Date: 2017-03-02 12:26+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -122,7 +122,7 @@ msgstr "Da li je auto_increment_increment podešen na 1"
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
-msgstr ""
+msgstr "Vrednost auto_increment_increment veća od 1 trenutno nije podržana. Pogledajte Issue CRM-7923 za više detalja i moguće rešenje."
 
 #: install/index.php
 msgid "Is the provided database name valid?"
