po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 15:53+0000\n"
+"PO-Revision-Date: 2017-03-02 11:10+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -591,7 +591,7 @@ msgid ""
 "user to select BOTH an auto-renew AND a non-auto-renew membership. This "
 "requires submitting multiple processor transactions, and is not supported "
 "for one or more of the payment processors enabled under the Amounts tab."
-msgstr ""
+msgstr "Set cena članstva povezan sa ovom onlajn donacijom dozvoljava korisniku da izabere I automatsko obnavljanje članstva I neautomatsko obnavljanje članstva. Ovo zahteva slanje transakcija preko različitih procesora i nije podržano od strane jednog ili više procesora uplate koji su aktivirani u kartici Sume."
 
 #: CRM/Member/Form/MembershipBlock.php
 msgid ""
@@ -1775,7 +1775,7 @@ msgid ""
 "Are you sure you want to delete the selected memberships? This delete "
 "operation cannot be undone and will delete all transactions and activity "
 "associated with these memberships."
-msgstr ""
+msgstr "Da li ste sigurni da želite da obrišete označena članstva? Ova operacija je nepovratna i ukloniće sve transakcije i aktivnosti povezane sa ovim članstvima."
 
 #: templates/CRM/Member/Form/Task/PDFLetter.tpl
 msgid "Membership Letter (PDF)"
@@ -1799,7 +1799,7 @@ msgid ""
 "'External ID' for each new contact which you can then use to match "
 "memberships to contacts. Then return to this screen and import the "
 "membership records."
-msgstr ""
+msgstr "Import članstava zahteva da svaka osoba, domaćinstvo ili organizacija već postoji kao zapis o kontaktu u vašoj CiviCRM bazi. Ukoliko treba da uradite import članstava za koje zapisi o kontaktima još uvek nisu dodati u CiviCRM - to ćete učiniti u 2 koraka. Prvo, upotrebite <strong>Import kontakata</strong> da biste dodali zapise o kontaktima. Ukoliko je moguće, za svaki novi kontakt upotrebite jedinstveni 'Eksterni ID' koji ćete onda upotrebiti kako biste povezali članstva sa kontaktima. Zatim se vratite na ovaj ekran i uradite import zapisa o članstvu."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid "Matching Memberships to Contacts"
@@ -1842,7 +1842,7 @@ msgid ""
 "Identifier' (if you are using those in your contact records), OR the "
 "property defined in your Unsupervised Duplicate Matching rule (which is "
 "Email Address by default)."
-msgstr ""
+msgstr "Ukoliko unosite nove zapise o članstvu, moraćete da u vaš fajl uključite i kolonu koja sadrži vrednosti koje se koriste za povezivanje članstva sa postojećim kontaktom. Možete koristiti 'Interni ID kontakta', 'Eksterni ID kontakta' (ukoliko ih koristite u vašim zapisima o kontaktima), ILI svojstvo definisano u vašem Pravilu za pronalaženje duplikata bez nadzora (koje je, prema podrazumevanim podešavanjima, Email adresa)."
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
@@ -1855,7 +1855,7 @@ msgstr "Ukoliko ažurirate postojeće učesnike, neophodno je da uključite kolo
 msgid ""
 "The Membership Import Wizard allows you to easily upload memberships from "
 "other applications into CiviCRM."
-msgstr ""
+msgstr "Membership Import Wizard omogućava brzo postavljanje podataka o članstvu iz drugih aplikacija u CiviCRM."
 
 #: templates/CRM/Member/Import/Form/DataSource.tpl
 msgid ""
@@ -1923,9 +1923,9 @@ msgid ""
 msgid_plural ""
 "CiviCRM has detected %count records which are duplicates of existing CiviCRM"
 " membership records."
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
+msgstr[0] "CiviCRM je prepoznao %count zapis koji je duplikat već postojećeg CiviCRM zapisa o članstvu."
+msgstr[1] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o članstvu."
+msgstr[2] "CiviCRM je prepoznao %count zapisa koji su duplikati već postojećih CiviCRM zapisa o članstvu."
 
 #: templates/CRM/Member/Import/Form/Summary.tpl
 msgid "Rows with mismatched membership IDs... (NOT updated)."
@@ -1988,11 +1988,11 @@ msgstr "(prošli mesec)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid " (MTD)"
-msgstr ""
+msgstr "(mesec-do-danas)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "(YTD)"
-msgstr ""
+msgstr "(godina-do-danas)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "through %1"
@@ -2084,7 +2084,7 @@ msgstr "pojedinac"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "'Children' of that individual"
-msgstr ""
+msgstr "'Deca' tog pojedinca"
 
 #: templates/CRM/Member/Page/MembershipType.hlp
 msgid "Membership Period"
@@ -2187,7 +2187,7 @@ msgid ""
 "select an existing contact or enter a new one. The resulting contribution "
 "record will be linked to the payer, and a soft credit for that contribution "
 "will be linked to this contact (the member)."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko ovo članstvo plaća bilo ko osim člana (npr. poklon članstvo ili poklon pretplata), a vi želite da povežete uplatu sa osobom koja u stvari plaća. Moći ćete da odaberete postojeći kontakt ili unesete novi. Rezultujući zapis o donaciji će biti povezan sa uplatiocem, a zasluga za donaciju biće povezana sa ovim kontaktom (članom)."
 
 #: templates/CRM/Member/Page/Tab.hlp
 msgid "Override End Date for Auto-renew Memberships"
@@ -2201,7 +2201,7 @@ msgid ""
 "changed from what is manually entered. Use care when modifying the End Date "
 "value, and check the associated recurring payment in your payment processor "
 "system so they always match."
-msgstr ""
+msgstr "Ukoliko se datum završetka članstva razlikuje od datuma sledeće naplate koju će izvršiti procesor uplate, može doći do raznih problema. Može doći do prekida članstva, a datum obnove članstva se može promeniti u odnosu na datum koji ste ručno uneli. Postupajte pažljivo kada menjate vrednost Datuma završetka i proverite povezanu periodičnu uplatu u sistemu vašeg procesora uplate, tako da se uvek poklapaju."
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Click <a %1>Add Membership</a> to record a new membership."
@@ -2319,7 +2319,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew Subscription Status?"
-msgstr ""
+msgstr "Status automatske obnove pretplate?"
 
 #: CRM/Member/BAO/Query.php
 msgid "- None -"
