--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-03-01 08:58+0000\n"
-"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-02 13:48+0000\n"
+"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2824,7 +2824,7 @@ msgstr "Vaša registracija je poslata ka %1 na obradu. Odštampajte ovu stranicu
 msgid ""
 "A registration confirmation email will be sent to %1 once the transaction is"
 " processed successfully."
-msgstr "Email sa potvrdom registracije će biti poslat na #1 čim transakcija bude uspešno obrađena."
+msgstr "Email sa potvrdom registracije će biti poslat na %1 čim transakcija bude uspešno obrađena."
 
 #: templates/CRM/Event/Form/Registration/ThankYou.tpl
 msgid ""
@@ -3029,7 +3029,7 @@ msgid ""
 "'External ID' for each new contact which you can then use to match "
 "participant info such as event registration to the corresponding contact "
 "record. Then return to this screen and import the participant records."
-msgstr "Import učesnika zahteva da svaka osoba, domaćinstvo ili organizacija već postoji kao zapis o kontaktu u vašoj CiviCRM bazi. Ukoliko treba da uradite import informacija o učesniku za koje zapisi o kontaktima još uvek nisu dodati u CiviCRM - to ćete učiniti u 2 koraka. Prvo, upotrebite <strong>Import Kontakata</strong> da biste dodali zapise o kontaktima. Ukoliko je moguće, za svaki novi kontakt upotrebite 'Eksterni ID' koji ćete onda upotrebiti kako biste povezali informacije o učesnicima, kao što su registracija za događaj, sa odgovarajućim zapisom o kontaktu. Zatim se vratite na ovaj ekran i uradite import zapisa o učesnicima."
+msgstr "Import učesnika zahteva da svaka osoba, domaćinstvo ili organizacija već postoji kao zapis o kontaktu u vašoj CiviCRM bazi. Ukoliko treba da uradite import informacija o učesniku za koje zapisi o kontaktima još uvek nisu dodati u CiviCRM - to ćete učiniti u 2 koraka. Prvo, upotrebite <strong>Import Kontakata</strong> da biste dodali zapise o kontaktima. Ukoliko je moguće, za svaki novi kontakt upotrebite jedinstveni 'Eksterni ID' koji ćete onda upotrebiti kako biste povezali informacije o učesnicima, kao što su registracija za događaj, sa odgovarajućim zapisom o kontaktu. Zatim se vratite na ovaj ekran i uradite import zapisa o učesnicima."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Matching Participant Data to Contacts"
